--- a/package.xml
+++ b/package.xml
@@ -4,11 +4,10 @@
   <name>robot_control_custom_interfaces</name>
   <version>3.7.60</version>
   <description>ROS2 custom interfaces for OmniBot using Dynamixel SDK.</description>
+  <license>MIT</license>
   <maintainer email="vinayvp.98@gmail.com">Vinay Venkanagoud Patil</maintainer>
-  <license>MIT license</license>
-  <url type="website">http://wiki.ros.org/dynamixel_sdk</url>
-  <url type="repository">https://github.com/Vinay046/robot-control-custom-interfaces.git</url>
   <author email="vinayvp.98@gmail.com">Vinay Venkanagoud Patil</author>
+
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
   <build_depend>builtin_interfaces</build_depend>
